# adres_test

./: .gitignore  README.md  compose.yml  dockerfile  pyproject.toml
backend/: .env  dockerfile  main.py  pyproject.toml  requirements.txt
backend/app/: api.py  bs_logic.py  schemas.py
frontend/: acquisitions.html  create_acq.html  dockerfile  index.html  records.html
frontend/css/: styles.css
frontend/js/: acq.js  records.js
src/: .env  main.py  setup.py
src/app/: api.py  bs_logic.py  database.py  schemas.py
